N°4460 - Fix minor contrast issue in Darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -57,6 +57,7 @@ $pre-background: $ibo-color-grey-600;
 $ibo-scrollbar--scrollbar-track-background-color: $ibo-color-grey-700;
 $ibo-scrollbar--scrollbar-thumb-background-color: $ibo-color-grey-900;
 
+$ibo-navigation-menu--drawer--background-color: $ibo-color-grey-700;
 $ibo-navigation-menu--body--background-color: $ibo-color-grey-900;
 $ibo-navigation-menu--bottom-part--background-color: $ibo-color-grey-850;
 
@@ -229,7 +230,7 @@ $ibo-search-form-panel--criteria--color: $ibo-color-grey-100;
 $ibo-search-form-panel--more-criteria--background-color: $ibo-color-grey-800;
 $ibo-search-form-panel--more-criteria--color: $ibo-color-grey-100;
 $ibo-search-form-panel--more-criteria--icon--color: $ibo-color-primary-500;
-$ibo-search-form-panel--criteria--border-color: $ibo-color-grey-500;
+$ibo-search-form-panel--criteria--border-color: $ibo-color-grey-900;
 $ibo-search-form-panel--multiple-choice--hover--color: $ibo-color-grey-500;
 $ibo-search-form-panel--items--hover--color: $ibo-search-form-panel--multiple-choice--hover--color;
 
